--- a/styles/styles.css
+++ b/styles/styles.css
@@ -275,14 +275,19 @@ img {
   }
 }
 
-.hero-section { 
+.banner { 
     background: url(/images/gambar-telaga-bg.jpeg) no-repeat center;
     background-size: cover;
     width: 100%;
+    padding-top: 20%;
+    padding-bottom: 20%;
+    color: #ffffff;
+    position: relative;
+
     
 }
 
-.hero-section::before { 
+.banner::before { 
     background-color: rgb(0, 0, 0, 0.6);
     content: "";
     position: absolute;
@@ -292,12 +297,13 @@ img {
     left: 0; 
 } 
 
-.hero-section .container {
-    height: 100vh;
-    z-index: 1;
+.banner .content {
     
+    z-index: 1;
     position: relative;
 }
+
+
 
 
 
