--- a/view/tempat-wisata copy.html
+++ b/view/tempat-wisata copy.html
@@ -45,42 +45,73 @@
     
     
     
-    <section class="hero-section">
-       <!-- list destinasi wisata  -->
-      <!-- gambar telaga -->
-      <div class="container mx-auto">   
-        <div class="card__container mx-auto mt-5">
-          <article class="card__article">
-            <img src="/images/telaga-sarangan- (2).jpg" alt="" class="card__img">
-            <div class="card__data">
-              <span class="card__description"></span>
-              <h2 class="card__title">Telaga Sarangan</h2>
-              <a href="/view/telaga-sarangan.html" class="card__button">Baca Selengkapnya</a>
-            </div>
-          </article>
-
-          <article class="card__article">
-            <img src="/images/telaga-wahyu.jpg" alt="" class="card__img">
-            <div class="card__data">
-              <span class="card__description"></span>
-              <h2 class="card__title">Telaga Wahyu</h2>
-              <a href="/view/telaga-wahyu.html" class="card__button">Baca Selengkapnya</a>
-            </div>
-          </article>
-
-          <article class="card__article">
-            <img src="/images/bukit-mongkrang.jpeg" alt="" class="card__img">
-            <div class="card__data">
-              <span class="card__description"></span>
-              <h2 class="card__title">Gunung Mongkrang</h2>
-              <a href="/view/gunung-mongkrang.html" class="card__button">Baca Selengkapnya</a>
-            </div>
-          </article>
-
-          
-      </div>  
+    <div class="container-fluid banner">
+      <div class="content d-flex align-items-center justify-content-center fs-1 flex-column text-white">
+        <h1>Nikmati Keindahan Alam</h1>
+        <h1>Kota Magetan</h1>
+      </div>
     </div>
-    </section>
+    <div class="container mx-auto pb-5">   
+      <div class="card__container mx-auto mt-5 pb-5">
+        <article class="card__article">
+          <img src="/images/telaga-sarangan- (2).jpg" alt="" class="card__img">
+          <div class="card__data">
+            <span class="card__description"></span>
+            <h2 class="card__title">Telaga Sarangan</h2>
+            <a href="/view/telaga-sarangan.html" class="card__button">Baca Selengkapnya</a>
+          </div>
+        </article>
+
+        <article class="card__article">
+          <img src="/images/telaga-wahyu.jpg" alt="" class="card__img">
+          <div class="card__data">
+            <span class="card__description"></span>
+            <h2 class="card__title">Telaga Wahyu</h2>
+            <a href="/view/telaga-wahyu.html" class="card__button">Baca Selengkapnya</a>
+          </div>
+        </article>
+
+        <article class="card__article">
+          <img src="/images/bukit-mongkrang.jpeg" alt="" class="card__img">
+          <div class="card__data">
+            <span class="card__description"></span>
+            <h2 class="card__title">Gunung Mongkrang</h2>
+            <a href="/view/gunung-mongkrang.html" class="card__button">Baca Selengkapnya</a>
+          </div>
+        </article>
+
+        <article class="card__article">
+          <img src="/images/mojosemi-park.jpg" alt="" class="card__img">
+          <div class="card__data">
+            <span class="card__description"></span>
+            <h2 class="card__title">Mojosemi Park</h2>
+            <a href="/view/gunung-mongkrang.html" class="card__button">Baca Selengkapnya</a>
+          </div>
+        </article>
+
+        <article class="card__article">
+          <img src="/images/geni-langit.jpeg" alt="" class="card__img">
+          <div class="card__data">
+            <span class="card__description"></span>
+            <h2 class="card__title">Geni Langit</h2>
+            <a href="/view/gunung-mongkrang.html" class="card__button">Baca Selengkapnya</a>
+          </div>
+        </article>
+
+        <article class="card__article">
+          <img src="/images/Cemoro-Sewu.jpg" alt="" class="card__img">
+          <div class="card__data">
+            <span class="card__description"></span>
+            <h2 class="card__title">Cemoro Sewu</h2>
+            <a href="/view/gunung-mongkrang.html" class="card__button">Baca Selengkapnya</a>
+          </div>
+        </article>
+
+        
+    </div>  
+  
+
+  
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
